tests/invalid/variables/bad_decl_2.rs
/*
fail: 1
*/

main(): i32 {
    foo bar: i64 = 3;
    return bar;
}